@@ -2,6 +2,9 @@
 Change log for datafield_template
 ========================================
 
+2020-01-10 (46)
+ - remove unused code to detect bilingual strings
+
 2019-10-30 (44)
  - dasvfield_template standardize layout and spelling in CHANGES.txt
 
